fixed another css but on mobile

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -292,7 +292,13 @@ footer a i{
     }
 
 
-
+    .margin-inherit{
+      margin: inherit;
+      border-radius: 10px;
+      padding: 10px;
+      margin-bottom: 25px;
+      position: relative;
+    }
 
     .score-grid {
         display: grid;
@@ -334,5 +340,12 @@ footer a i{
 @media screen and (max-width: 759px) {
     .score-child{
         margin: auto;
+    }
+    .margin-inherit{
+      margin: inherit;
+      border-radius: 10px;
+      padding: 10px;
+      margin-bottom: 25px;
+      position: relative;
     }
 }
